hphp/hack/test/typecheck/shape_remove_key4.php.exp
File "shape_remove_key4.php", line 13, characters 21-25:
You can only unset fields of local variables (Typing[4139])
